--- a/xp-table-behavior.html
+++ b/xp-table-behavior.html
@@ -85,8 +85,10 @@ A behavior used to add table capabilities on a custom element.
              * @attribute find-deep
              * @type boolean
              * @default true
+             * @readonly
              */
             findDeep: {
+                readOnly: true,
                 type: Boolean,
                 value: true
             },
