--- a/xp-tr-behavior.html
+++ b/xp-tr-behavior.html
@@ -84,7 +84,7 @@ A behavior used to add table row capabilities on a custom element.
         /*********************************************************************/
 
         // HANDLER
-        _selectHandler: function (event) {
+        _switchHandler: function (event) {
 
             // Refiring
             this.refire(event, event.type, {firer: this});
