--- a/xp-table-styles.html
+++ b/xp-table-styles.html
@@ -28,6 +28,7 @@ A stylesheet used to stylize a table element.
 
         <style>
             :host {
+                border-collapse: collapse;
                 display: table;
                 width: 100%;
             }
