--- a/xp-table-styles.html
+++ b/xp-table-styles.html
@@ -28,7 +28,7 @@ A stylesheet used to stylize a table element.
 
         <style>
             :host {
-                border-collapse: collapse;
+                border-collapse: separate;
                 display: table;
                 width: 100%;
             }
