--- a/xp-tr-behavior.html
+++ b/xp-tr-behavior.html
@@ -65,11 +65,8 @@ A behavior used to add table row capabilities on a custom element.
              *
              * @attribute data
              * @type *
-             * @notifies
              */
-            data: {
-                notify: true
-            }
+            data: {}
         },
 
         /*********************************************************************/
